Add email links in .html

--- a/webpage.html
+++ b/webpage.html
@@ -8,9 +8,9 @@ Simple HTML document
 <h1>Team number: 59</h1>
 <h2>Team member names:</h2>
 <ul>
-<li>Team member 1: Abishek Viswanath Pittamandalam, email: apittam@ncsu.edu</li>
-<li>Team member 2: Ishwarya Anandakrishnan email: iananda@ncsu.edu</li>
-<li>Team member 3: Ashwinkumar Manickam Vaithiyanathan, email: amanick@ncsu.edu</li>
+<li>Team member 1: Abishek Viswanath Pittamandalam, email: <a href="mailto:apittam@ncsu.edu">apittam@ncsu.edu</a></li>
+<li>Team member 2: Ishwarya Anandakrishnan email: <a href="mailto:iananda@ncsu.edu">iananda@ncsu.edu</a></li>
+<li>Team member 3: Ashwinkumar Manickam Vaithiyanathan, email: <a href="mailto:amanick@ncsu.edu">amanick@ncsu.edu</a></li>
 </ul>
 </body>
 </html>
