--- a/webpage.html
+++ b/webpage.html
@@ -12,5 +12,8 @@ Simple HTML document
 <li>Team member 2: Ishwarya Anandakrishnan email: <a href="mailto:iananda@ncsu.edu">iananda@ncsu.edu</a></li>
 <li>Team member 3: Ashwinkumar Manickam Vaithiyanathan, email: <a href="mailto:amanick@ncsu.edu">amanick@ncsu.edu</a></li>
 </ul>
+<footer>
+Page footer
+</footer>
 </body>
 </html>
